--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.devopsbuddy</groupId>
-	<artifactId>devopsbuddy</artifactId>
+	<groupId>com.devopbuddy</groupId>
+	<artifactId>devopbuddy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>devopsbuddy</name>
+	<name>devopbuddy</name>
 	<description>Startup-ready web skeleton project</description>
 
 	<parent>
