--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-starter-security</artifactId>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
 			<!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
@@ -68,11 +68,11 @@
 		</dependency>
 
 		<!-- Spring Security -->
-		<!--<dependency>-->
-			<!--<groupId>org.thymeleaf.extras</groupId>-->
-			<!--<artifactId>thymeleaf-extras-springsecurity4</artifactId>-->
-			<!--<version>2.1.2.RELEASE</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+			<version>2.1.2.RELEASE</version>
+		</dependency>
 
 		<!-- Spring data -->
 		<dependency>
